# Vision-Automation-Project

./: README.md  capture_template.py  detection.py  post_1.txt  post_10.txt  post_2.txt  post_3.txt  post_4.txt  post_5.txt  post_6.txt  post_7.txt  post_8.txt  post_9.txt  pyproject.toml  vision_automation.py  vision_automation_template_matching.py
